--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import './assets/sass/_variables.sass'
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"
+body
+  background-color: $background
+  margin: 0
+  padding: 0
+  font-size: $base-font-size
