--- a/src/app/components/expenses/expenses.component.sass
+++ b/src/app/components/expenses/expenses.component.sass
@@ -1,4 +1,25 @@
 @import '../../../assets/sass/_variables.sass'
 
+
 .form
   background-color: $white
+
+.inputs-wrapper
+  display: grid
+  grid-template-columns: repeat(2, 1fr)
+  grid-area: form
+  padding: 10px
+
+.table
+  grid-area: table
+  height: 100%
+  max-height: calc(100vh - 30px)
+  overflow-y: auto
+
+.expenses
+  display: grid
+  grid-gap: 10px
+  grid-template-columns: repeat(2, 1fr)
+  grid-template-rows: auto
+  grid-template-areas: "form table" ". table"
+
